--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,13 @@ flutter:
       - assets/images/flies/macho-fly-1.png
       - assets/images/flies/macho-fly-2.png
       - assets/images/flies/macho-fly-dead.png
+      - assets/images/bg/lose-splash.png
+      - assets/images/branding/title.png
+      - assets/images/ui/dialog-credits.png
+      - assets/images/ui/dialog-help.png
+      - assets/images/ui/icon-credits.png
+      - assets/images/ui/icon-help.png
+      - assets/images/ui/start-button.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
